--- a/aws-k8sec2.yml
+++ b/aws-k8sec2.yml
@@ -31,15 +31,20 @@
       state: present
     register: subnet_create_result
 
+  - name: subnet2
+    ec2_vpc_subnet:
+      cidr: 172.16.2.0/24
+      vpc_id: "{{ vpc_create_result.vpc.id }}"
+      az: ap-northeast-2c
+      map_public: yes
+      state: present
+    register: subnet2_create_result
+
   - name: routing table
     ec2_vpc_route_table:
       vpc_id: "{{ vpc_create_result.vpc.id }}"
       state: present
       subnets: "{{ subnet_create_result.subnet.id }}"
-      routes:
-        - dest: 0.0.0.0/0
-          gateway_id: "{{ igw_result.gateway_id }}"
-
   - name: sg1
     ec2_group:
       name: subnet1_sg
@@ -57,13 +62,23 @@
         ports:
         - 80
         cidr_ip: 0.0.0.0/0
+
+  - name: sg2
+    ec2_group:
+      name: subnet2_sg
+      vpc_id: "{{ vpc_create_result.vpc.id }}"
+      state: present
+      description: permit ssh, web
+      tags:
+        name: subnet2_sg
+      rules:
       - proto: tcp
         ports:
-        - 8080
+        - 22
         cidr_ip: 0.0.0.0/0
       - proto: tcp
         ports:
-        - 8009
+        - 80
         cidr_ip: 0.0.0.0/0
 
   - name: instance1
@@ -79,4 +94,20 @@
       assign_public_ip: yes
       instance_tags:
         name: instance1
+    register: instance1_result
+
+  - name: instance2
+    ec2:
+      key_name: aws-con2
+      instance_tags:
+        name: instance2
+      image: ami-086a3601cd7a83590 
+      group: subnet1_sg
+      wait: yes
+      count: 1
+      vpc_subnet_id: "{{ subnet2_create_result.subnet.id }}"
+      assign_public_ip: yes
+      instance_tags:
+        name: instance2
+    register: instance2_result
 
