--- a/lb.yaml
+++ b/lb.yaml
@@ -12,9 +12,14 @@
         zones:
           - ap-northeast-2a
           - ap-northeast-2c
+        subnets:
+          - subnet-086e9feb404ca1bc8
         listeners:
           - protocol: http
             load_balancer_port: 80
             instance_port: 80
         tags:
           name: elb_test
+        instance_ids:
+          - i-0155157a87c45ee43 
+          - i-0d7f0cf1b4a3fd7c7
